objects/BusinessHourTempStore__c.object
<CustomObject>
    <description>Administrative object to help handle BusinessHours Integration</description>
    <fields>
        <fullName>Business_Hours_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours ID</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>BusinessHourTempStores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Name__c</fullName>
        <label>Business Hours Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageFriday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CoverageFriday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoverageMonnday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CoverageMonnday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoverageSaturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CoverageSaturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoverageSunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CoverageSunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoverageThursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CoverageThursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoverageTuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CoverageTuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoverageWednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CoverageWednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>EndTime</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Integration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZoneSIDKey__c</fullName>
        <label>TimeZoneSIDKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BusinessHourTempStore</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Hours_Name__c</columns>
        <columns>CoverageFriday__c</columns>
        <columns>CoverageMonnday__c</columns>
        <columns>CoverageSaturday__c</columns>
        <columns>CoverageSunday__c</columns>
        <columns>CoverageThursday__c</columns>
        <columns>CoverageTuesday__c</columns>
        <columns>CoverageWednesday__c</columns>
        <columns>EndTime__c</columns>
        <columns>Integration_Id__c</columns>
        <columns>IsDefault__c</columns>
        <columns>StartTime__c</columns>
        <columns>TimeZoneSIDKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BH-{0000000000}</displayFormat>
        <label>BusinessHourTempStoreNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BusinessHourTempStores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>